--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,13 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_EXTERNAL_PORT=15432
+DB_CONNECTION=pgsql
+DB_HOST=agendador-db
+DB_PORT=5432
+DB_DATABASE=agendador
+DB_USERNAME=easyjur
+DB_PASSWORD=K7IzU5VvO6QfDy1DJp
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
